Updated 3rd party deps, minimal Java version to 11